--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>my first ever website</h1>
     <p>look mama i can push to github</p>
-    <h2>My name is Shamim</h2>
+    <strong> Hello Bokachuda</strong>
     
 </body>
 </html>
